--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -24,3 +24,5 @@
   }
 .btnFormIn{position: fixed; bottom:20vh; right:0px;}
 .formnew{padding:20px; background-color: white;box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;}
+.tablenew{margin-top:30px;padding:20px; background-color: white;box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;}
+.tablenew td{font-size:16px}
